@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/DFBPoint
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/DFBPoint/ChangeLog,v 1.14 2008/04/21 17:29:10 phreak Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/DFBPoint/ChangeLog,v 1.15 2009/07/29 23:42:12 vostorga Exp $
+
+  29 Jul 2009; Víctor Ostorga <vostorga@gentoo.org> DFBPoint-0.7.2.ebuild:
+  Fixing DEPENDS and RDEPENDS, closes bug #232420
 
   21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
   Fix up metadata.xml. If there's no maintainer for the package, the metadata
